--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,8 @@ jobs:
     steps:
       - uses: actions/checkout@master
       - uses: getsentry/action-git-diff-suggestions@v1
-  Copy-Repo-Files:
+  Build-app:
     runs-on: webdev
     steps:
     - uses: actions/checkout@master
-    - run: yarn install
-    - run: yarn build
+    - run: yarn install && yarn build
